# osg-build

./: .git-blame-ignore-list  .gitignore  ChangeLog  LICENSE  MANIFEST.in  Makefile  VDTBuildConstants.py  VDTBuildMockConfig.py  VDTBuildUtils.py  fetch-dot-source  koji-blame  koji-tag-checker  koji-tag-diff  kojitest  kojitest2.py  osg-build  osg-build-test  osg-import-srpm  osg-koji  osg-koji-home.conf  osg-make-release  osg-promote  osg-sign  platform-post.py  push-rpm-to-vdt  pylintrc  remote-task.py  rpm-ripper  sample-osg-build.ini  sample-vdt-build.ini  setup.cfg  sha1vdt  vdt-build
Attic/: batlab-constants  osg-build-batlab  osg-build-prebuild-osg  osg-build-push-parts
Attic/osg_build_lib/: platform-post.py  remote-declare.py  remote-task.py
data/: mock-auto.cfg.in  osg-ca-bundle.crt  osg-koji-home.conf  osg-koji-site.conf  osg-koji.conf  osg-koji.conf.in  promoter.ini  rpmlint.cfg  signing_keys.ini
doc/: sample-osg-build.ini
osg_build_lib/: __init__.py  constants.py  error.py  koji.py  mock.py  mock_config.py  rpm_utils.py  utils.py
osgbuild/: clientcert.py  constants.py  error.py  fetch_sources.py  git.py  importer.py  koji.py  koji_blame.py  kojiinter.py  main.py  mock.py  namedtuple.py  osg_koji.py  osg_sign.py  promoter.py  srpm.py  svn.py  utils.py  version.py
osgbuild/test/: common.py  promoter_extra.ini  test_osgbuild.py  test_osgbuild_koji.py  test_osgpromote.py
rpm/: osg-build.spec
test/: test_osgpromote.py
