[metadata]
name = osg-build
version = attr: osgbuild.version.__version__
author = Matyas Selmeci
author_email = matyas@cs.wisc.edu
maintainer = OSG Software Team
maintainer_email = software-discuss@opensciencegrid.org

[options]
packages =
    osgbuild
python_requires = >=3.6
scripts =
    fetch-dot-source
    koji-tag-diff
    sha1vdt

[options.entry_points]
console_scripts =
    koji-blame = osgbuild.koji_blame:entrypoint
    osg-build = osgbuild.main:entrypoint
    osg-import-srpm = osgbuild.importer:main
    osg-koji = osgbuild.osg_koji:main
    osg-promote = osgbuild.promoter:entrypoint
    osg-sign = osgbuild.osg_sign:entrypoint

[options.extras_require]
koji =
    koji>=1.24
