[metadata]
name = osg-build
version = attr: osgbuild.version.__version__
author = Matyas Selmeci
author_email = matyas@cs.wisc.edu
maintainer = OSG Software Team
maintainer_email = software-discuss@opensciencegrid.org
description = Tools for RPM development for the OSG Software Stack
url = https://github.com/opensciencegrid/osg-build
project_urls =
    Documentation = https://osg-htc.org/technology/software/osg-build-tools/
license = ASL 2.0

[options]
packages =
    osgbuild
    osgbuild.data
include_package_data = True
python_requires = >=3.6
install_requires =
    importlib_resources
    koji>=1.24
scripts =
    fetch-dot-source
    koji-tag-diff
    sha1vdt

[options.entry_points]
console_scripts =
    koji-blame = osgbuild.koji_blame:entrypoint
    osg-build = osgbuild.main:entrypoint
    osg-import-srpm = osgbuild.importer:main
    osg-koji = osgbuild.osg_koji:main
    osg-promote = osgbuild.promoter:entrypoint
    osg-sign = osgbuild.osg_sign:entrypoint
